# UCO-Practices

./: README.md
Primero/: README.md
Primero/ip/: amigos  amigos.cc  media30  media30.cc
Primero/ip/Practica1/: Ej1  Ej1.cxx  Ej1.eje  Ej10  Ej10.cxx  Ej10.eje  Ej11  Ej11.cxx  Ej11.eje  Ej12  Ej12.cxx  Ej12.eje  Ej2  Ej2.cxx  Ej2.eje  Ej3  Ej3.cxx  Ej3.eje  Ej4  Ej4.cxx  Ej4.eje  Ej5  Ej5.cxx  Ej5.eje  Ej6  Ej6.cxx  Ej6.eje  Ej7  Ej7.cxx  Ej7.eje  Ej8  Ej8.cxx  Ej8.eje  (+3 more)
Segundo/: README.md
Segundo/bbdd/: README.md
Segundo/ed/: README.md
Segundo/ed/alphabet_soup/: CHANGELOG.txt  CMakeLists.txt  DO_NOT_MODIFY.TXT  alphabet_soup.cpp  alphabet_soup.hpp  alphabet_soup_solver.cpp  alphabet_soup_solver.hpp  test_alphabet_soup_solver.cpp  test_trie.cpp  trie.cpp  trie.hpp
Segundo/ed/alphabet_soup/tests_alphabet_soup/: 01  02
Segundo/ed/alphabet_soup/tests_retrieve/: 00
Segundo/ed/alphabet_soup/tests_trie/: 00  01  02  03  04
Segundo/ed/avl-tree/: CMakeLists.txt  DO_NOT_MODIFY.TXT  avltree.hpp  avltree_imp.hpp  test_avltree.cpp
Segundo/ed/avl-tree/tests_avltnode/: 00  01  02  03  04  05  06
Segundo/ed/avl-tree/tests_avltree/: 00  01  02  03  04  05  12  13  14  15  16  17  18
Segundo/ed/avl-tree/tests_bstree/: 00  01  02  03  04  05  06  07  08  09  10
Segundo/ed/check_brackets/: CHANGELOG.TXT  CMakeLists.txt  DO_NOT_MODIFY.TXT  check_brackets.cpp  check_brackets.hpp  slist.hpp  stack.hpp  test_check_brackets.cpp  test_slist.cpp  test_stack.cpp
Segundo/ed/check_brackets/tests_slist/: 00  01  02  03  04  05  06  07  08  09  10
Segundo/ed/check_brackets/tests_stack/: 00  01  02
Segundo/ed/dos_detector/: CHANGELOG.txt  CMakeLists.txt  DO_NOT_MODIFY.TXT  dos_detector.cpp  dos_detector.hpp  hash_table.hpp  ip_utils.hpp  test_dos_detector.cpp  test_hash_table.cpp
Segundo/ed/dos_detector/tests_dos_detector/: 00  01
Segundo/ed/dos_detector/tests_hash_table/: 00  01
Segundo/pas/: 02-comillas.sh  03-operaciones.sh  06-numero.sh  07-fichero.sh  08-switch.sh  README.md  comando practicas
Segundo/poo/: README.md
Segundo/sint/: README.md
Segundo/ssoo/: README.md
Tercero/: README.md
Tercero/gsasd/: README.md
Tercero/redes/: README.md
(+554 files in other folders)
